wrapped answer spans in containers, fixed css, the letter now occupies the answer height

--- a/src/pages/AllQuestions/AllQuestions.scss
+++ b/src/pages/AllQuestions/AllQuestions.scss
@@ -39,18 +39,15 @@
 
     .answer {
       display: flex;
-      border: 1px aquamarine solid;
       border-radius: 15px;
-      align-items: center;
       gap: .5rem;
-
       cursor: pointer;
       transition: all 0.5s ease-in-out;
 
-      span {
-        padding: 1rem 1.5rem;
+      div {
         border-radius: 15px 0 0 15px;
-      }
+        padding: 1rem 1rem;
+       }
 
       &:hover {
         transform: scale(1.05);
@@ -61,6 +58,9 @@
 
     &__letter {
       background-color: aquamarine;
+      display: flex;
+      align-items: center;
+      justify-content: center;
     }
 
   }
